# tagras2

./: .env  main.py  pyproject.toml  requirements.txt
application/: __init__.py
application/tg_bot/: __init__.py  middleware.py
application/tg_bot/ai_assistant/: __init__.py  handlers.py
application/tg_bot/department_list/: __init__.py
application/tg_bot/events/: __init__.py
application/tg_bot/faq/: __init__.py
application/tg_bot/filters/: is_admin.py
application/tg_bot/key_employee/: __init__.py
application/tg_bot/menu/: __init__.py  handlers.py
application/tg_bot/office_maps/: __init__.py  handlers.py
application/tg_bot/redefining_roles/: __init__.py
application/tg_bot/tasks/: __init__.py
application/tg_bot/training/: __init__.py
application/tg_bot/useful_contacts/: __init__.py
application/tg_bot/user/: __init__.py  handlers.py
domain/department_list/: db_bl.py  db_dal.py
domain/department_list/models/: __init__.py  department_list.py
domain/events/: db_bl.py  db_dal.py
domain/events/models/: event.py  user_events.py
domain/faq/: db_bl.py  db_dal.py
domain/faq/models/: faq.py
domain/key_employee/: db_bl.py  db_dal.py
domain/key_employee/models/: key_employee.py
domain/office_maps/: db_bl.py  db_dal.py
domain/office_maps/models/: building.py  floor.py  office_maps.py  section.py
domain/quiz/: bot.py  db_bl.py  db_dal.py  main.py
domain/quiz/models/: quiz.py
domain/quiz/modules/: add_incorrect_answers.py  utils.py  (+3 more)
domain/redefining_users/: db_bl.py  db_dal.py
domain/tasks/: db_bl.py  db_dal.py
utils/: config.py  connection_db.py  connection_db_old.py  constants.py  container.py  data_state.py  deep_link.py  get_employee_data_from_1c.py  get_week_start_end.py  logging_config.py  logs.py  table_convertor.py
utils/ai_qwiz/: giga_chat_response.txt  gigachat_connection.py  key.txt  pdf_to_text.py  pdf_video_obr.py  quiz1.json  test.py  test_parser.py  test_quiz_parser.py  video_to_text.py
utils/employees_from_1c/: get_employee_data_from_1c.py  telethon_client.py
(+148 files in other folders)
