[project]
name = "employee-adaptation-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Ramzil",email = "yazik_2018@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "aiogram (>=3.18.0,<4.0.0)",
    "dependency-injector (>=4.46.0,<5.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pdfminer (>=20191125,<20191126)",
    "docx (>=0.2.4,<0.3.0)",
    "python-docx (>=1.1.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
