[tool.poetry]
name = "employee-adaptation-bot"
version = "0.1.0"
description = ""
authors = ["Ramzil <yazik_2018@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pydantic-settings = "^2.8.1"
aiogram = "^3.18.0"
dependency-injector = "^4.46.0"
psycopg2 = "^2.9.10"
colorama = "^0.4.6"
bs4 = "^0.0.2"
pdfminer = "^20191125"
docx = "^0.2.4"
python-docx = "^1.1.2"
loguru = "^0.7.3"
sqlalchemy = "^2.0.39"
requests = "^2.32.3"
pdfminer-six = "^20240706"
pillow = "^10.0.0"
moviepy = "^2.1.2"
