[tool.poetry]
name = "employee-adaptation-bot"
version = "0.1.0"
description = ""
authors = ["Ramzil <yazik_2018@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pydantic-settings = "^2.8.1"
aiogram = "^3.18.0"
dependency-injector = "^4.46.0"
psycopg2 = "^2.9.10"
colorama = "^0.4.6"
bs4 = "^0.0.2"
docx = "^0.2.4"
python-docx = "^1.1.2"
loguru = "^0.7.3"
sqlalchemy = "^2.0.39"
requests = "^2.32.3"
pillow = "^10.0.0"
moviepy = "^2.1.2"
pdfminer = "^20191125"
pdfminer-six = "^20240706"
numba = "^0.61.0"
langchain = "^0.3.21"
langchain-community = "^0.3.20"
gigachat = "^0.1.39.post1"
pypdf = "^5.4.0"
telethon = "^1.39.0"
openai-whisper = "^20240930"
